# hostednetwork-gui

./: .gitignore  CMakeLists.txt  README  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  gpl-3.0.txt  hostednetwork-gui.pro  hostednetwork-gui.qrc  hostednetwork-gui.rc  licensedialog.cpp  licensedialog.h  licensedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cmake-windows-latest.yml
installer/: hostednetwork-gui.iss  hostednetwork-gui.nsi  license.txt
nsis/: hostednetwork-gui.nsi
